objects/Order_Details__x.object
<CustomObject>
    <externalDataSource>awsDynamodbXds</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Discount__c</fullName>
        <externalDeveloperName>disc</externalDeveloperName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <externalDeveloperName>pk</externalDeveloperName>
        <label>Order</label>
        <length>50</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipLabel>Order Details</relationshipLabel>
        <relationshipName>Order_Details</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <externalDeveloperName>sk</externalDeveloperName>
        <label>Product</label>
        <length>50</length>
        <referenceTo>Product__x</referenceTo>
        <relationshipLabel>Order Details</relationshipLabel>
        <relationshipName>Order_Details</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <externalDeveloperName>quant</externalDeveloperName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <externalDeveloperName>price</externalDeveloperName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>Order__c</columns>
        <columns>Product__c</columns>
        <columns>Discount__c</columns>
        <columns>Quantity__c</columns>
        <columns>Unit_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Order Details</pluralLabel>
</CustomObject>